fix(server): misaligned connected build/test (#8802)

--- a/server/assets/app/css/pages/build_run.css
+++ b/server/assets/app/css/pages/build_run.css
@@ -18,6 +18,7 @@
     & > [data-part="title-group"] {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       gap: var(--noora-spacing-4);
 
       & > [data-part="title"] {
